--- a/lesson_4/index.html
+++ b/lesson_4/index.html
@@ -6,7 +6,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@300&family=Montserrat+Subrayada:wght@400;700&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:700" rel="stylesheet" />
+	<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:700" rel="stylesheet">
 	<link rel="stylesheet" href="css/style.css">
 	<title>Олимпиада</title>
 </head>
