--- a/lesson_7/index.html
+++ b/lesson_7/index.html
@@ -80,14 +80,19 @@
 				<div class="swiper">
 					<div class="swiper-wrapper">
 						<div class="swiper-slide">
-							<div class="speaker__bg">
-								<div class="speaker__body">
-									<p class="speaker__cost">Staret From $299</p>
-									<h1>Ultra HD Quality Bluetooth Sound Speakers</h1>
-									<p class="speaker__text">
-										Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ornare vestibulum mollis. Nam vitae augue purus 
-									</p>
-									<button type="button" class="speaker__button">Shop Now</button>
+							<div class="speaker__content">
+								<div class="speaker__container">
+									<div class="speaker__body">
+										<div class="body__text">
+											<p class="speaker__cost">Staret From $299</p>
+											<h1>Ultra HD Quality Bluetooth Sound Speakers</h1>
+											<p class="speaker__text">
+												Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ornare vestibulum mollis. Nam vitae augue purus 
+											</p>
+											<button type="button" class="speaker__button">Shop Now</button>
+										</div>
+										<img src="img/speaker_1.png" alt="Колонка">
+									</div>
 								</div>
 							</div>
 						</div>
