--- a/lesson_9/index.html
+++ b/lesson_9/index.html
@@ -17,7 +17,7 @@
 						<img src="img/icon/Logo.svg" alt="Logo">
 						<img src="img/icon/phone.svg" alt="phone">
 						<img src="img/icon/Vector.svg" alt="Vector">
-						<img src="img/icon/Ayro UI.svg" alt="Logo">
+						<img src="img/icon/Ayro.svg" alt="Logo">
 						<img src="img/icon/GrayGrids.svg" alt="Logo">
 						<img src="img/icon/Phone_2.svg" alt="phone">
 						<img src="img/icon/LineIcons.svg" alt="Logo">
