--- a/lesson_10/index.html
+++ b/lesson_10/index.html
@@ -11,8 +11,8 @@
 		<div class="wrapper">
 			<header class="header">
 				<div class="header__container">
-					<a class="header__logo logo" href="#">VENCE<span>.</span></a>
-					<nav class="menu__body">   
+					<a class="header__logo" href="#">VENCE<span>.</span></a>
+					<nav class="header__menu menu">  
 						<ul class="menu__list">
 							<li class="menu__item">
 								<a class="menu__link" href="">Example</a>
@@ -28,25 +28,27 @@
 							</li>
 						</ul>
 					</nav>
-					<div class="header__social social">
-						<div class="social__links social__links-after">
+					<div class="header__user">
+						<div class="header__social header__social_border social">
 							<a class="social__link" href="#">Fb</a>
 							<a class="social__link" href="#">Tw</a>
 							<a class="social__link" href="#">Ln</a>
 						</div>
-						<a class="social__search" href="#">
+						<a class="header__search" href="#">
 							<img src="img/icon/search.svg" alt="Иконка поиска">
 						</a>
 					</div>
 				</div>
 			</header>
-			<main class="main">
-				<div class="page page__indent">
+			<main class="main main_indent">
+				<div class="main__page main__page_indent page">
 					<div class="page__container">
-						<img class="page__bg" src="img/bg_page.webp" alt="Большой офис">
-						<div class="page__body body">
-							<div class="body__name">Tomas Edwardo</div>
-							<h1 class="body__title title__white">
+						<div class="page__bg">
+							<img class="page__img" src="img/bg_page.webp" alt="Большой офис">
+						</div>
+						<div class="page__body">
+							<div class="page__name">Tomas Edwardo</div>
+							<h1 class="page__title page__title_white">
 								Instagram artists with great
 								photography skills
 							</h1>
@@ -56,113 +58,113 @@
 				<div class="design">
 					<div class="design__container">
 						<div class="design__body">
-							<div class="design__top body__top">
-								<h2 class="body__title">
+							<div class="design__top design__top_indent">
+								<h2 class="design__title">
 									Design is not just what it looks like and feels like.
 								</h2>
-								<ul class="body-top__kinds">
-									<li class="body-top__item">
-										<a class="body-top__link" href="#">All</a>
+								<ul class="design__list">
+									<li class="design__item">
+										<a class="design__link" href="#">All</a>
 									</li>
-									<li class="body-top__item">
-										<a class="body-top__link" href="#">Modern</a>
+									<li class="design__item">
+										<a class="design__link" href="#">Modern</a>
 									</li>
-									<li class="body-top__item">
-										<a class="body-top__link" href="#">Industrial</a>
+									<li class="design__item">
+										<a class="design__link" href="#">Industrial</a>
 									</li>
-									<li class="body-top__item">
-										<a class="body-top__link" href="#">Art Moderne</a>
+									<li class="design__item">
+										<a class="design__link" href="#">Art Moderne</a>
 									</li>
-									<li class="body-top__item">
-										<a class="body-top__link" href="#">Contemporary</a>
+									<li class="design__item">
+										<a class="design__link" href="#">Contemporary</a>
 									</li>
-									<li class="body-top__item">
-										<a class="body-top__link" href="#">Industrial</a>
+									<li class="design__item">
+										<a class="design__link" href="#">Industrial</a>
 									</li>
-									<li class="body-top__item">
-										<a class="body-top__link" href="#">Minimalist</a>
+									<li class="design__item">
+										<a class="design__link" href="#">Minimalist</a>
 									</li>
 								</ul>
 							</div>
-							<div class="design__block design__indent">
-								<div class="block__item">
-									<img class="item__img" src="img/card_1.webp" alt="Интерьер">
-									<div class="item__date">
+							<div class="design__block design__block_indent">
+								<div class="design__card">
+									<img class="design__img" src="img/card_1.webp" alt="Интерьер">
+									<div class="design__date">
 										29.Jun.2021
 									</div>
-									<p class="item__text">
+									<p class="design__text">
 										Richard Norton photorealistic rendering as real photos
 									</p>
 								</div>
-								<div class="block__item">
-									<img class="item__img" src="img/card_2.webp" alt="Интерьер">
-									<div class="item__date">
+								<div class="design__card">
+									<img class="design__img" src="img/card_2.webp" alt="Интерьер">
+									<div class="design__date">
 										29.Jun.2021
 									</div>
-									<p class="item__text">
+									<p class="design__text">
 										Richard Norton photorealistic rendering as real photos
 									</p>
 								</div>
-								<div class="block__item">
-									<img class="item__img" src="img/card_3.webp" alt="Интерьер">
-									<div class="item__date">
+								<div class="design__card">
+									<img class="design__img" src="img/card_3.webp" alt="Интерьер">
+									<div class="design__date">
 										29.Jun.2021
 									</div>
-									<p class="item__text">
+									<p class="design__text">
 										Richard Norton photorealistic rendering as real photos
 									</p>
 								</div>
-								<div class="block__item">
-									<img class="item__img" src="img/card_4.webp" alt="Интерьер">
-									<div class="item__date">
+								<div class="design__card">
+									<img class="design__img" src="img/card_4.webp" alt="Интерьер">
+									<div class="design__date">
 										29.Jun.2021
 									</div>
-									<p class="item__text">
+									<p class="design__text">
 										Richard Norton photorealistic rendering as real photos
 									</p>
 								</div>
-								<div class="block__item">
-									<img class="item__img" src="img/card_5.webp" alt="Интерьер">
-									<div class="item__date">
+								<div class="design__card">
+									<img class="design__img" src="img/card_5.webp" alt="Интерьер">
+									<div class="design__date">
 										29.Jun.2021
 									</div>
-									<p class="item__text">
+									<p class="design__text">
 										Richard Norton photorealistic rendering as real photos
 									</p>
 								</div>
-								<div class="block__item">
-									<img class="item__img" src="img/card_6.webp" alt="Интерьер">
-									<div class="item__date">
+								<div class="design__card">
+									<img class="design__img" src="img/card_6.webp" alt="Интерьер">
+									<div class="design__date">
 										29.Jun.2021
 									</div>
-									<p class="item__text">
+									<p class="design__text">
 										Richard Norton photorealistic rendering as real photos
 									</p>
 								</div>
-								<div class="block__item">
-									<img class="item__img" src="img/card_7.webp" alt="Интерьер">
-									<div class="item__date">
+								<div class="design__card">
+									<img class="design__img" src="img/card_7.webp" alt="Интерьер">
+									<div class="design__date">
 										29.Jun.2021
 									</div>
-									<p class="item__text">
+									<p class="design__text">
 										Richard Norton photorealistic rendering as real photos
 									</p>
 								</div>
-								<div class="block__item">
-									<img class="item__img" src="img/card_8.webp" alt="Интерьер">
-									<div class="item__date">
+								<div class="design__card">
+									<img class="design__img" src="img/card_8.webp" alt="Интерьер">
+									<div class="design__date">
 										29.Jun.2021
 									</div>
-									<p class="item__text">
+									<p class="design__text">
 										Richard Norton photorealistic rendering as real photos
 									</p>
 								</div>
-								<div class="block__item">
-									<img class="item__img" src="img/card_9.webp" alt="Интерьер">
-									<div class="item__date">
+								<div class="design__card">
+									<img class="design__img" src="img/card_9.webp" alt="Интерьер">
+									<div class="design__date">
 										29.Jun.2021
 									</div>
-									<p class="item__text">
+									<p class="design__text">
 										Richard Norton photorealistic rendering as real photos
 									</p>
 								</div>
@@ -172,61 +174,61 @@
 				</div>
 				<div class="trend">
 					<div class="trend__container">
-						<div class="trend__content content-trend">
-							<div class="content-trend__header">
-								<h2 class="content-trend__title">Trending</h2>
+						<div class="trend__content trend__content_indent">
+							<div class="trend__header">
+								<h2 class="trend__title">Trending</h2>
 							</div>
-							<div class="content-trend__block">
-								<div class="block__item block__size">
-									<div class="body__content">
-										<img class="content__img" src="img/trending_1.webp" alt="Интерьер">
-										<div class="content__body">
-											<div class="content__date">29.Jun.2021</div>
-											<div class="content__text text__transfer">
+							<div class="trend__block">
+								<div class="trend__card trend__card_size card">
+									<div class="card__content">
+										<img class="card__img" src="img/trending_1.webp" alt="Интерьер">
+										<div class="card__body">
+											<div class="card__date">29.Jun.2021</div>
+											<div class="card__text">
 												Richard Norton photorealistic rendering as real photos
 											</div>
 										</div>
 									</div>
 								</div>
-								<div class="block__item">
-									<div class="body__content">
-										<img class="content__img" src="img/trending_2.webp" alt="Интерьер">
-										<div class="content__body">
-											<div class="content__date">29.Jun.2021</div>
-											<div class="content__text">
+								<div class="trend__card card">
+									<div class="card__content">
+										<img class="card__img" src="img/trending_2.webp" alt="Интерьер">
+										<div class="card__body">
+											<div class="card__date">29.Jun.2021</div>
+											<div class="card__text">
 												Richard Norton photorealistic rendering as real photos
 											</div>
 										</div>
 									</div>
 								</div>
-								<div class="block__item">
-									<div class="body__content">
-										<img class="content__img" src="img/trending_3.webp" alt="Интерьер">
-										<div class="content__body">
-											<div class="content__date">29.Jun.2021</div>
-											<div class="content__text">
+								<div class="trend__card card">
+									<div class="card__content">
+										<img class="card__img" src="img/trending_3.webp" alt="Интерьер">
+										<div class="card__body">
+											<div class="card__date">29.Jun.2021</div>
+											<div class="card__text">
 												Richard Norton photorealistic rendering as real photos
 											</div>
 										</div>
 									</div>
 								</div>
-								<div class="block__item">
-									<div class="body__content">
-										<img class="content__img" src="img/trending_4.webp" alt="Интерьер">
-										<div class="content__body">
-											<div class="content__date">29.Jun.2021</div>
-											<div class="content__text">
+								<div class="trend__card card">
+									<div class="card__content">
+										<img class="card__img" src="img/trending_4.webp" alt="Интерьер">
+										<div class="card__body">
+											<div class="card__date">29.Jun.2021</div>
+											<div class="card__text">
 												Richard Norton photorealistic rendering as real photos
 											</div>
 										</div>
 									</div>
 								</div>
-								<div class="block__item">
-									<div class="body__content">
-										<img class="content__img" src="img/trending_5.webp" alt="Интерьер">
-										<div class="content__body">
-											<div class="content__date">29.Jun.2021</div>
-											<div class="content__text">
+								<div class="trend__card card">
+									<div class="card__content">
+										<img class="card__img" src="img/trending_5.webp" alt="Интерьер">
+										<div class="card__body">
+											<div class="card__date">29.Jun.2021</div>
+											<div class="card__text">
 												Richard Norton photorealistic rendering as real photos
 											</div>
 										</div>
@@ -240,13 +242,13 @@
 			<footer class="footer">
 				<div class="footer__container">
 					<div class="footer__top">
-						<a class="footer__logo logo" href="#">VENCE Studio<span>.</span></a>
+						<a class="footer__logo" href="#">VENCE Studio<span>.</span></a>
 						<div class="footer__contacts">
 							<a class="footer__link" href="#">About Studio</a>
 							<a class="footer__link" href="#">Archive</a>
 							<a class="footer__link" href="#">Contact Us</a>
 						</div>
-						<div class="social__links">
+						<div class="footer__social social">
 							<a class="social__link" href="#">Fb</a>
 							<a class="social__link" href="#">Tw</a>
 							<a class="social__link" href="#">Ln</a>
