--- a/lesson_14/index.html
+++ b/lesson_14/index.html
@@ -16,121 +16,150 @@
 					</div>
 					<div class="header__item">
 						<a class="header__link" href="#">3 Column</a>
-						<a class="header__link header__link_color" href="#">4 Column</a>
+						<a class="header__link" href="#">4 Column</a>
 					</div>
 				</div>
 			</header>
 			<main class="main">
 				<div class="main__container">
-					<div class="main__box box">
-						<div class="box__body">
-							<div class="box__img">
-								<img src="img/Image-1.webp" alt="wooman">
+					<div class="main__card card">
+						<div class="card__column">
+							<div class="card__item">
+								<a class="card__link" href="#">CREATIVE</a>
+								<div class="card__img">
+									<img src="img/Image-1.webp" alt="wooman">
+								</div>
+								<div class="card__content">
+									<div class="card__date">
+										<p>29.Jun.2021</p>
+									</div>
+									<h2 class="card__title">Instagram artists with great photography skills</h2>
+									<div class="card__text">
+										<p>
+											Many years ago, I worked for my parents who own a video
+											production company.
+										</p>
+									</div>
+								</div>
+								<div class="card__bottom">
+									<p>By: Peter Rowardson</p>
+								</div>
 							</div>
-							<div class="box__date">
-								<p>29.Jun.2021</p>
-							</div>
-							<h2 class="box__title">Instagram artists with great photography skills</h2>
-							<div class="box__text">
-								<p>
-									Many years ago, I worked for my parents who own a video
-									production company.
-								</p>
-							</div>
-							<div class="box__autor">
-								<p>By: Peter Rowardson</p>
-							</div>
-							<a class="box__link" href="#">CREATIVE</a>
 						</div>
-						<div class="box__body">
-							<div class="box__img">
-								<img src="img/Image-2.webp" alt="design">
+						<div class="card__column">
+							<div class="card__item">
+								<a class="card__link" href="#">CREATIVE</a>
+								<div class="card__img">
+									<img src="img/Image-2.webp" alt="wooman">
+								</div>
+								<div class="card__content">
+									<div class="card__date">
+										<p>29.Jun.2021</p>
+									</div>
+									<h2 class="card__title">The 20 best creative & strong handmade of 2022</h2>
+									<div class="card__text">
+										<p>
+											Many years ago, I worked for my parents who own a video
+											production company.
+										</p>
+									</div>
+								</div>
+								<div class="card__bottom">
+									<p>By: Peter Rowardson</p>
+								</div>
 							</div>
-							<div  class="box__date">
-								<p>29.Jun.2021</p>
-							</div>
-							<h2 class="box__title">The 20 best creative & strong handmade of 2022</h2>
-							<div class="box__text">
-								<p>
-									Many years ago, I worked for my parents who own a video production company.
-								</p>
-							</div>
-							<div class="box__autor">
-								<p>By: Peter Rowardson</p>
-							</div>
-							<a class="box__link" href="#">CREATIVE</a>
 						</div>
-						<div class="box__body">
-							<div class="box__img">
-								<img src="img/Image-3.webp" alt="design">
+						<div class="card__column">
+							<div class="card__item">
+								<a class="card__link" href="#">CREATIVE</a>
+								<div class="card__img">
+									<img src="img/Image-3.webp" alt="wooman">
+								</div>
+								<div class="card__content">
+									<div class="card__date">
+										<p>29.Jun.2021</p>
+									</div>
+									<h2 class="card__title">Apartamento at ten: A decade of celebrating the everyday</h2>
+									<div class="card__text">
+										<p>
+											Many years ago, I worked for my parents who own a video
+											production company.
+										</p>
+									</div>
+								</div>
+								<div class="card__bottom">
+									<p>By: Peter Rowardson</p>
+								</div>
 							</div>
-							<div class="box__date">
-								<p>29.Jun.2021</p>
-							</div>
-							<h2 class="box__title">Apartamento at ten: A decade of celebrating the everyday</h2>
-							<div class="box__text">
-								<p>
-									Many years ago, I worked for my parents who own a video production company.
-								</p>
-							</div>
-							<div class="box__autor">
-								<p>By: Peter Rowardson</p>
-							</div>
-							<a class="box__link" href="#">CREATIVE</a>
 						</div>
-						<div class="box__body">
-							<div class="box__img">
-								<img src="img/Image-4.webp" alt="design">
+						<div class="card__column">
+							<div class="card__item">
+								<a class="card__link" href="#">CREATIVE</a>
+								<div class="card__img">
+									<img src="img/Image-4.webp" alt="wooman">
+								</div>
+								<div class="card__content">
+									<div class="card__date">
+										<p>29.Jun.2021</p>
+									</div>
+									<h2 class="card__title">Alessandro Novelli’s animation plays with ANDRE</h2>
+									<div class="card__text">
+										<p>
+											Many years ago, I worked for my parents who own a video
+											production company.
+										</p>
+									</div>
+								</div>
+								<div class="card__bottom">
+									<p>By: Peter Rowardson</p>
+								</div>
 							</div>
-							<div class="box__date">
-								<p>29.Jun.2021</p>
-							</div>
-							<h2 class="box__title">Alessandro Novelli’s animation plays with ANDRE</h2>
-							<div class="box__text">
-								<p>
-									Many years ago, I worked for my parents who own a video production company.
-								</p>
-							</div>
-							<div class="box__autor">
-								<p>By: Peter Rowardson</p>
-							</div>
-							<a class="box__link" href="#">CREATIVE</a>
 						</div>
-						<div class="box__body">
-							<div class="box__img">
-								<img src="img/Image-5.webp" alt="design">
+						<div class="card__column">
+							<div class="card__item">
+								<a class="card__link" href="#">CREATIVE</a>
+								<div class="card__img">
+									<img src="img/Image-5.webp" alt="wooman">
+								</div>
+								<div class="card__content">
+									<div class="card__date">
+										<p>29.Jun.2021</p>
+									</div>
+									<h2 class="card__title">Aron Klein’s captivating images of the UDEA</h2>
+									<div class="card__text">
+										<p>
+											Many years ago, I worked for my parents who own a video
+											production company.
+										</p>
+									</div>
+								</div>
+								<div class="card__bottom">
+									<p>By: Peter Rowardson</p>
+								</div>
 							</div>
-							<div class="box__date">
-								<p>29.Jun.2021</p>
-							</div>
-							<h2 class="box__title">Aron Klein’s captivating images of the UDEA</h2>
-							<div class="box__text">
-								<p>
-									Many years ago, I worked for my parents who own a video production company.
-								</p>
-							</div>
-							<div class="box__autor">
-								<p>By: Peter Rowardson</p>
-							</div>
-							<a class="box__link" href="#">CREATIVE</a>
 						</div>
-						<div class="box__body">
-							<div class="box__img">
-								<img src="img/Image-6.webp" alt="design">
+						<div class="card__column">
+							<div class="card__item">
+								<a class="card__link" href="#">CREATIVE</a>
+								<div class="card__img">
+									<img src="img/Image-6.webp" alt="wooman">
+								</div>
+								<div class="card__content">
+									<div class="card__date">
+										<p>29.Jun.2021</p>
+									</div>
+									<h2 class="card__title">Renzo Patton combines design and nature</h2>
+									<div class="card__text">
+										<p>
+											Many years ago, I worked for my parents who own a video
+											production company.
+										</p>
+									</div>
+								</div>
+								<div class="card__bottom">
+									<p>By: Peter Rowardson</p>
+								</div>
 							</div>
-							<div class="box__date">
-								<p>29.Jun.2021</p>
-							</div>
-							<h2 class="box__title">Renzo Patton combines design and nature</h2>
-							<div class="box__text">
-								<p>
-									Many years ago, I worked for my parents who own a video production company.
-								</p>
-							</div>
-							<div class="box__autor">
-								<p>By: Peter Rowardson</p>
-							</div>
-							<a class="box__link" href="#">CREATIVE</a>
 						</div>
 					</div>
 				</div>
