--- a/lesson_16/index.html
+++ b/lesson_16/index.html
@@ -42,11 +42,11 @@
 						<form class="delivery-form" action="https://jsonplaceholder.typicode.com/posts" method="post">
 							<div class="delivery-form_registration registration">
 								<div class="registration__line line">
-									<label class="line__label" for="first-name">delivery-first-name<span>*</span></label>
+									<label class="line__label" for="first-name">First name<span>*</span></label>
 									<input class="line__input" id="first-name" name="first" type="text" autocomplete="off">
 								</div>
 								<div class="registration__line line">
-									<label class="line__label" for="last-name">delivery-last-name<span>*</span></label>
+									<label class="line__label" for="last-name">Last name<span>*</span></label>
 									<input class="line__input" id="last-name" name="last" type="text" autocomplete="off">
 								</div>
 								<div class="registration__line line">
