--- a/lesson_20/index.html
+++ b/lesson_20/index.html
@@ -164,7 +164,7 @@
 						<div class="shop__wrapper">
 							<div class="shop__column">
 								<div class="shop__card card">
-									<a class="card__link" href="javascript:void(0)">
+									<a class="card__link">
 										<img src="img/shop-img/img-1.webp" alt="cloth">
 									</a>
 									<div class="card__body">
@@ -174,13 +174,13 @@
 										<h3 class="card__title">
 											Angels malu zip jeans slim black used
 										</h3>
-										<div class="card__price" href="javascript:void(0)">
+										<div class="card__price">
 											139,00 EUR
 										</div>
 									</div>
 								</div>
 								<div class="shop__card card">
-									<a class="card__link" href="javascript:void(0)">
+									<a class="card__link">
 										<img src="img/shop-img/img-2.webp" alt="cloth">
 									</a>
 									<div class="card__body">
@@ -190,7 +190,7 @@
 										<h3 class="card__title">
 											Angels malu zip jeans slim black used
 										</h3>
-										<div class="card__price" href="javascript:void(0)">
+										<div class="card__price">
 											235,00 EUR
 										</div>
 									</div>
@@ -206,7 +206,7 @@
 										<h3 class="card__title">
 											Angels malu zip jeans slim black used
 										</h3>
-										<div class="card__price" href="javascript:void(0)">
+										<div class="card__price">
 											90,00 EUR
 										</div>
 									</div>
@@ -223,7 +223,7 @@
 										<h3 class="card__title">
 											Angels malu zip jeans slim black used
 										</h3>
-										<div class="card__price" href="javascript:void(0)">
+										<div class="card__price">
 											139,00 EUR
 											<span>119,00 EUR</span>
 										</div>
@@ -257,7 +257,7 @@
 										<h3 class="card__title">
 											Angels malu zip jeans slim black used
 										</h3>
-										<div class="card__price" href="javascript:void(0)">
+										<div class="card__price">
 											139,00 EUR
 											<span>119,00 EUR</span>
 										</div>
@@ -274,7 +274,7 @@
 										<h3 class="card__title">
 											Angels malu zip jeans slim black used
 										</h3>
-										<div class="card__price" href="javascript:void(0)">
+										<div class="card__price">
 											139,00 EUR
 										</div>
 									</div>
@@ -290,7 +290,7 @@
 										<h3 class="card__title">
 											Angels malu zip jeans slim black used
 										</h3>
-										<div class="card__price" href="javascript:void(0)">
+										<div class="card__price">
 											139,00 EUR
 										</div>
 									</div>
