--- a/lesson_20/index.html
+++ b/lesson_20/index.html
@@ -240,7 +240,7 @@
 										<h3 class="card__title">
 											Angels malu zip jeans slim black used
 										</h3>
-										<div class="card__price" href="javascript:void(0)">
+										<div class="card__price">
 											139,00 EUR
 										</div>
 									</div>
